--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-    "name": "@guardian/eslint-plugin-no-unused-return-value",
-    "version": "1.0.0",
-    "description": "Eslint rule to catch unused function return values",
-    "scripts": {
-        "test": "jest"
-    },
-    "main": "dist/index.js",
-    "types": "index.d.ts",
-    "dependencies": {
-        "jest": "^29.2.0",
-        "ts-jest": "^29.0.3"
-    },
-    "devDependencies": {
-        "@typescript-eslint/eslint-plugin": "^5.40.0",
-        "@typescript-eslint/parser": "^5.40.0",
-        "eslint": "^8.25.0",
-        "typescript": "^4.8.4"
-    }
+  "name": "@guardian/eslint-plugin-no-unused-return-value",
+  "version": "1.0.0",
+  "description": "Eslint rule to catch unused function return values",
+  "scripts": {
+    "test": "jest"
+  },
+  "main": "dist/index.js",
+  "types": "index.d.ts",
+  "dependencies": {},
+  "devDependencies": {
+    "@guardian/prettier": "^2.1.5",
+    "@typescript-eslint/eslint-plugin": "^5.40.0",
+    "@typescript-eslint/parser": "^5.40.0",
+    "eslint": "^8.25.0",
+    "jest": "^29.2.0",
+    "prettier": "^2.7.1",
+    "ts-jest": "^29.0.3",
+    "typescript": "^4.8.4"
+  }
 }
